[package]
name = "cargo-vendor-tools"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2021"

[[bin]]
name = "cargo-compute-checksums"
path = "src/compute_checksums.rs"

[[bin]]
name = "cargo-list-lock"
path = "src/list_lock.rs"

[dependencies]
clap = "2.33.3"
serde_json = "1.0.64"
sha2 = "0.9.5"
toml = "0.5.8"
